ReCoded Script and CSS for task list

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -59,18 +59,18 @@
     <div class="container whiteFont">
         <br>
         <div class="row">
-            <div class="col-6">
+            <div class="col-4">
                 <h2>Type in the task and press enter to add it!</h2>
                 <br>
                 <input type="text" id="inputText">
                 <br>
                 <br>
             </div>
-            <div class="col-6">
+            <div class="col-8">
                 <div class="">
 
                     <h2>Click a task that you have completed!</h2>
-                    <ul id="outputText" class="grayOutline taskListSizeFix tasklistColorFix upSizeText setup">
+                    <ul id="taskList" class="taskListStyle  setFontSize30 setup">
 
                     </ul>
                 </div>
