--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container onTopBG">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="alignCenterX superSizeText whiteFont my-5">Handy Things to use.</h1>
+                    <h1 class="alignCenterX setFontSize70 whiteFont my-5">Handy Things to use.</h1>
                 </div>
                 <div class="col-12">
                     <div class="card-deck">
