Added undo button that does nothing

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -67,12 +67,21 @@
                 <br>
             </div>
             <div class="col-8">
-                <div class="">
-
-                    <h2>Click a task that you have completed!</h2>
-                    <ul id="taskList" class="taskListStyle  setFontSize30 setup">
-
-                    </ul>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-10">
+                            <h2>Click the x next to a task to remove it</h2>
+                            
+                        </div>
+                        <div class="col">
+                            <img id="undoBtn" class="undoBtnSize" src="./Images/undo.png" alt="">
+                        </div>
+                        <div class="col-12">
+                            <ul id="taskList" class="taskListStyle  setFontSize30 setup">
+                            
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
